2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop interpretation of constants, resolves #2
	* Keep only Doctrine DBAL-based database class, resolves #3

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added compatibility with TYPO3 v8, in particular Doctrine DBAL, resolves #1
	* Released version 2.1.0

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76013

2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75929

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.4.0, resolves #57775

2014-04-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.2, resolves #57569

2013-07-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #50260
	* Released version 1.3.0

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2013-01-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.0, resolves #44465

2012-09-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.1.0

2012-09-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 4.7, raised requirements to 4.5, resolves #41246
	* Added handling in case errors are not thrown as exceptions, resolves #41247

2012-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added sample configuration, resolves #40919
	* Added support for ADODB fetch mode parameter, resolves #36877 (thanks to ian)

2012-06-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed connection process to use NConnect, resolves #37956 (thanks to Christoph Holtermann)
	* Released version 1.0.1

2011-03-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.0.0