@@ -9,19 +9,19 @@ if (!defined('TYPO3_MODE')) {
         'connector',
         // Service key
         'tx_svconnectorsql_sv1',
-        array(
+        [
             'title' => 'SQL connector',
             'description' => 'Connector service to issue SQL query to any database, via ADODB',
-    
+
             'subtype' => 'sql',
-    
-            'available' => TRUE,
+
+            'available' => true,
             'priority' => 50,
             'quality' => 50,
-    
+
             'os' => '',
             'exec' => '',
-    
+
             'className' => \Cobweb\SvconnectorSql\Service\ConnectorSql::class
-        )
+        ]
 );
